--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
       <div class="root-in-right">
         <ul>
           <li class="right-menu">
-            <a href="#home-area">HOME</a>
+            <a href="#none">HOME</a>
           </li>
-          <li class="right-menu"><a href="#education-area">EDUCATION</a></li>
-          <li class="right-menu"><a href="#projects-area">PROJECTS</a></li>
-          <li class="right-menu"><a href="#skills-area">SKILLS</a></li>
+          <li class="right-menu"><a href="#none">EDUCATION</a></li>
+          <li class="right-menu"><a href="#none">PROJECTS</a></li>
+          <li class="right-menu"><a href="#none">SKILLS</a></li>
         </ul>
       </div>
     </div>
