--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/responsive.css" />
+
     <title>고경현의 포트폴리오</title>
   </head>
 
   <body>
+    <div class="contact-box contact-box1">
+      <span><span>010-2442-1143</span></span>
+      <span><i class="xi-mobile"></i></span>
+    </div>
+    <div class="contact-box contact-box2">
+      <span><span>apdlvmfm12345@gmail.com</span></span>
+      <span><i class="xi-mail"></i></span>
+    </div>
     <div id="root">
       <!-- root-left -->
       <div class="root-in-left">
@@ -42,7 +51,7 @@
             <div class="paragraph01">
               <h2 class="paragraph-title">
                 <span class="text-ani-wrapper"
-                  ><span class="text-hide">123대학교</span></span
+                  ><span class="text-hide">군산대학교</span></span
                 ><span class="paragraph-basic graduate">
                   <span class="text-ani-wrapper">
                     <span class="text-hide">2018.3 ~ 2022.2</span>
@@ -74,7 +83,8 @@
               <h3 class="paragraph-subtitle">
                 <span class="text-ani-wrapper"
                   ><span class="text-hide"
-                    >프론트엔드 개발자 양성과정</span
+                    >프론트엔드 개발자(자바스크립트,리액트) 실무 양성과정
+                    A</span
                   ></span
                 >
               </h3>
