--- a/index.html
+++ b/index.html
@@ -101,22 +101,28 @@
               <ul class="paragraph-basic">
                 <li>
                   <span class="text-ani-wrapper"
-                    ><span class="text-hide">세부내용1</span></span
+                    ><span class="text-hide"><b>HTML</b> : 주요 태그 사용법, 시맨틱 태그, 링크, 이미지, 폼 요소
+                    사용, 속성 사용
+                    (class, id, name, alt, href, src, value, placeholder 등)</span></span
                   >
                 </li>
                 <li>
                   <span class="text-ani-wrapper"
-                    ><span class="text-hide">세부내용2</span></span
+                    ><span class="text-hide"><b>Javascript</b> : 기본적인 문법과 자료형 이해, 조건문 및 반복문,
+                    배열과 객체, DOM
+                    조작, 비동기 처리</span></span
                   >
                 </li>
                 <li>
                   <span class="text-ani-wrapper"
-                    ><span class="text-hide">세부내용3</span></span
+                    ><span class="text-hide"><b>React</b> : JSX와 HTML 구조 이해, Props와 State, 이벤트
+                    처리 함수형 컴포넌트와 훅 사용(useState, useEffect),리액트 라우터</span></span
                   >
                 </li>
                 <li>
                   <span class="text-ani-wrapper"
-                    ><span class="text-hide">세부내용4</span></span
+                    ><span class="text-hide"><b>Git</b> : git init, git add, git commit, git
+                    push 등의 기본적인 Git 명령어 사용, Github Pages를 이용한 기본적인 배포</span></span
                   >
                 </li>
               </ul>
